--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.6",
+    "@types/react-datepicker": "^6.2.0",
+    "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
+    "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.0.6",
     "zustand": "^5.0.3"
