--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.6",
     "@types/react-datepicker": "^6.2.0",
     "chart.js": "^4.4.7",
@@ -21,6 +20,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.6",
     "zustand": "^5.0.3"
   },
