--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.6",
     "@types/react-datepicker": "^6.2.0",
     "chart.js": "^4.4.7",
@@ -19,6 +21,7 @@
     "react-big-calendar": "^1.17.1",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.0.0",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.6",
