--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
-    "react-big-calendar": "^1.17.1",
+    "react-big-calendar": "^1.18.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.0.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.6",
     "zustand": "^5.0.3"
